--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,7 +18,7 @@ setw -g aggressive-resize on
 unbind C-b
 set -g prefix C-a
 
-# Set parent terminal title to reflect current window in tmux session 
+# Set parent terminal title to reflect current window in tmux session
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
@@ -27,7 +27,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Enable mouse support
-set -g mouse on
+set -g mouse off
 
 # ==========================
 # ===   Key bindings     ===
@@ -41,7 +41,7 @@ unbind '"'  # split-window
 unbind '}'  # swap-pane -D
 unbind '{'  # swap-pane -U
 unbind [    # paste-buffer
-unbind ]    
+unbind ]
 unbind "'"  # select-window
 unbind n    # next-window
 unbind p    # previous-window
@@ -50,7 +50,7 @@ unbind M-n  # next window with alert
 unbind M-p  # next window with alert
 unbind o    # focus thru panes
 unbind &    # kill-window
-unbind "#"  # list-buffer 
+unbind "#"  # list-buffer
 unbind =    # choose-buffer
 unbind z    # zoom-pane
 unbind M-Up  # resize 5 rows up
@@ -61,7 +61,7 @@ unbind M-Left # resize 5 rows left
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
 
-# Reload tmux configuration 
+# Reload tmux configuration
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
@@ -189,7 +189,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane \
     send-keys -X copy-pipe "$yank"
 bind -T copy-mode-vi MouseDown1Pane select-pane \;\
    send-keys -X clear-selection
-    
+
 # iTerm2 works with clipboard out of the box, set-clipboard already set to "external"
 # tmux show-options -g -s set-clipboard
 # set-clipboard on|external
@@ -256,6 +256,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
 
 # Plugin properties
