update some configurations

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,35 +1,17 @@
 {
   "java.format.settings.url": "/Users/daniel/.config/coc/style/google-java-modified.xml",
   "java.format.settings.profile": "GoogleStyle",
-  "coc.preferences.formatOnSaveFiletypes": [
-    "java",
-    "javascript",
-    "vue",
-    "php",
-    "yml",
-    "html",
-    "css",
-    "scss",
-    "markdown",
-    "json",
-    "lua"
-  ],
-  "prettier.disableLanguages": [
-    "lua"
-  ],
   "prettier.eslintIntegration": true,
   "eslint.filetypes": [
     "javascript",
     "javascriptreact",
     "typescript",
-    "typescriptreact"
+    "typescriptreact",
+    "vue"
   ],
-  "html.filetypes": [
-    "html",
-    "handlebars",
-    "htmldjango",
-    "blade"
-  ],
+  "eslint.autoFixOnSave": true,
+  "coc.preferences.formatOnSaveFiletypes": ["js", "vue"],
+  "html.filetypes": ["html", "handlebars", "htmldjango", "blade"],
   "vetur.format.defaultFormatter.js": "prettier",
   "suggest.noselect": false,
   "coc.preferences.jumpCommand": "drop"
