--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -92,6 +92,12 @@ bind -r C-o swap-pane -D
 # Zoom pane
 bind + resize-pane -Z
 
+# Resize panes
+bind -r C-j resize-pane -D 5
+bind -r C-k resize-pane -U 5
+bind -r C-l resize-pane -L 5
+bind -r C-h resize-pane -R 5
+
 # Link window
 bind L command-prompt -p "Link window from (session:window): " "link-window -s %% -a"
 
@@ -146,7 +152,6 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind -n M-Up copy-mode
 bind v copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
@@ -257,7 +262,8 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'egel/tmux-gruvbox'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
+set -g @plugin 'danybmx/tmux-material-theme'
 
 # Plugin properties
 set -g @sidebar-tree 't'
@@ -268,3 +274,5 @@ set -g @open-S 'https://www.google.com/search?q='
 
 # Run all plugins' scripts
 run '~/.tmux/plugins/tpm/tpm'
+
+run-shell /Users/daniel/Work/oss/tmux-material-theme/tmux-onedark-theme.tmux
